<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.MapActivity">

    <item
        android:id="@+id/action_about_app"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit_login_out"
        android:title="@string/exit_login_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit_app"
        android:title="@string/exit_app"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_locate"
        android:enabled="false"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
</menu>
