<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_800"
    tools:context="com.example.khotiun.ekaterinoslav.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_centerHorizontal="true"
        app:hintTextAppearance="@style/MyHintText">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textColorHint="@color/grey_50"
            android:textSize="20dp"
            android:theme="@style/MyEditText"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutEmail"
        android:layout_centerHorizontal="true"
        app:hintTextAppearance="@style/MyHintText">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColorHint="@color/grey_50"
            android:textSize="20dp"
            android:theme="@style/MyEditText"/>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutPassword"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign_in"/>

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/registration"/>

    </LinearLayout>

</RelativeLayout>
