<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/frafment_selection_sign_in_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/title"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linear_layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frafment_selection_sign_in_app_name"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/frafment_selection_sign_in_et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textColorHint="@color/secondary_text"
                android:textSize="16dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayoutEmail"
            android:layout_centerHorizontal="true"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/frafment_selection_sign_in_et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textColorHint="@color/secondary_text"
                android:textSize="16dp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/frafment_selection_sign_in_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_bootom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_top"
        android:orientation="vertical"
        android:weightSum="1">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/frafment_selection_sign_in_btn_sign_in_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/frafment_selection_sign_in_tv_regestration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/registration_account"
        android:clickable="true"/>

</RelativeLayout>